k8s-apps/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: myapps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Add this line
  rules:
    - host: app1.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - host: app2.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rhythmapp-service
                port:
                  number: 80
